re organizacion del codigo y consolas funcionales probadas